overflow scroll and max height added to container to avoid items not being visible when the matchlist is long

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
     border-radius: 4px;
     text-transform: uppercase;
     text-align: center;
+    height: 500px;
 }
 
 .title-box{
@@ -57,6 +58,7 @@ body {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .match-tile{
